force-app/main/default/objects/Booking__c/fields/Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account__c</fullName>
    <description>Lookup to the B2B Corporate Account or Travel Agency funding/managing this booking.</description>
    <label>Corporate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Bookings</relationshipLabel>
    <relationshipName>Corporate_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>