force-app/main/default/objects/Booking__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <description>Lookup to the Person Account (Passenger) holding this booking.</description>
    <label>Passenger</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Flight Bookings</relationshipLabel>
    <relationshipName>Flight_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>